Fix styling for channels on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,3 @@
-$icon-font-path: '../fonts/';
-
-// bower:scss
-@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-// endbower
-
 // Variables
 $main-color: #6441A4;
 $secondary-color: #15ABE2;
@@ -91,10 +85,24 @@ a {
 	border-radius: 50%;
 }
 
-.label {
-	// align-self: flex-end;
-}
-
 .online {
 	background: $secondary-color;
+}
+
+@media screen and (max-width: 500px) {
+	.channel {
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.stream__game {
+		position: relative;
+		top: 10px;
+	}
+
+	.label {
+		align-self: flex-end;
+	}
 }
